# strangemood

./: .gitignore  Cargo.toml  README.md  package.json
.brev/: setup.sh
.github/workflows/: rust.yml  soteria.yml
auth/: README.md
auth/server/: Cargo.toml
auth/server/src/: main.rs  signature_message.rs  utils.rs
cli/: README.md  package.json  tsconfig.json
cli/src/: file.ts  numbers.ts  postCar.ts  provider.ts  token.ts
cli/src/commands/cash/: index.ts
cli/src/commands/charter/: get.ts  init.ts  ls.ts
cli/src/commands/charter/set/: reserve.ts
cli/src/commands/charter/treasury/: get.ts  init.ts
cli/src/commands/charter/treasury/set/: scalar.ts
cli/src/commands/file/: upload.ts
cli/src/commands/listing/: get.ts  init.ts  ls.ts
cli/src/commands/listing/file/: upload.ts
cli/src/commands/listing/set/: isAvailable.ts  uri.ts
cli/src/commands/purchase/: index.ts
cli/src/commands/receipt/: ls.ts
cli/src/commands/treasury/: get.ts  init.ts
js/: LICENSE  package.json
js/src/: client.ts  constants.ts  index.ts  instructions.ts  state.ts  strangemood.test.ts  types.ts  utils.ts
js/src/dao/: index.ts  instructions.ts  state.ts  types.ts  utils.test.ts  utils.ts
js/src/dao/governance/: accounts.ts  error.ts  instructions.ts  serialization.ts
js/src/governance/: index.ts  instructions.ts  state.ts
js/src/strangemood/: index.ts  types.ts
js/test/: blah.test.ts
metadata/: Cargo.toml  metadata_readme.md
metadata/src/: main.rs
server/: Cargo.toml  serverreadme.md
server/src/: main.rs
services/: Cargo.toml  README.md  webpack.config.js  wrangler.toml
services-rust/: wrangler.toml
services-rust/cli/src/: main.rs
services-rust/src/: errors.rs  omg.rs  utils.rs
services/cli/: Cargo.toml
services/cli/src/: main.rs
services/src/: auth.rs  auth.ts  cloudflare.d.ts  cors.ts  crypto.ts  errors.rs  errors.ts  files.ts  framework.ts  handler.ts  lib.rs  omg.rs  omg.ts  rpc.rs  signature_message.rs  solana.ts  types.ts  utf8.ts  utils.rs
services/src/routes/: challenge.ts  listings.ts
storage/: README.md
storage/.devcontainer/: Dockerfile  devcontainer.json
storage/server/: .env.example  Cargo.toml
storage/server/src/: main.rs
storage/server/src/utils/: mod.rs  s3.rs  sol_client.rs  upload.rs
strangemood/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.base.json  tsconfig.cjs.json  tsconfig.json  upgrade.sh
strangemood/programs/strangemood/: Cargo.toml
strangemood/programs/strangemood/src/: cpi.rs  error.rs  external.rs  lib.rs  state.rs  util.rs
strangemood/src/: constants.ts  dao.ts  deploy.ts  entrypoint.rs  error.rs  idl.ts  index.ts  instruction.rs  instructions.ts  lib.rs  old.ts  pda.ts  processor.rs  state.rs  strangemood.test.ts  test.ts
strangemood/src/governance/: README.md  accounts.ts  borsh.ts  instructions.ts
strangemood/src/test/: instructions.ts  old.test.ts  staking.test.ts  strangemood.test.ts  testClient.ts  utils.ts
strangemood/tests/: integration.rs
