[package]
name = "strangemood"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.1"
thiserror = "1.0.30"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-governance = { version="2.1.3", features=["no-entrypoint"]}
arrayref = "0.3.6"
num-traits = "0.2.14"
borsh = "0.9.1"
hex = "0.4.3"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.1"
solana-sdk = "=1.8.1"
solana-validator = "=1.8.1"

[lib]
crate-type = ["cdylib", "lib"]
