[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-multipart = "0.3"
futures = "0.3.1"
rusoto_s3 = "0.43.0"
rusoto_core = "0.43.0"
bytes = { version = "0.5", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
