[package]
name = "strangemood"
version = "0.1.1"
description = "A decentralized marketplace for software licenses, on Solana"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "strangemood"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-governance = { version="2.1.3", features=["no-entrypoint"]}