[package]
name = "strangemood"
version = "0.1.1"
description = "A decentralized marketplace for software licenses, on Solana"
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "strangemood"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}